# TeamShiftManagement

./: Dockerfile  README.md  auth.py  build_css.js  config.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  routes.py  team_rotations.json  utils.py
instance/: team_management.db
static/css/: styles.css  tailwind.css
static/js/: admin.js  main.js
templates/: admin.html  base.html  index.html  login.html
