[tool.poetry]
name = "team-rotation-manager"
version = "0.1.0"
description = "A Flask application for managing team rotations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Flask = "^2.0.0"
Flask-SQLAlchemy = "^3.0.0"
Flask-Login = "^0.6.0"
Flask-Migrate = "^4.0.0"
APScheduler = "^3.10.0"
Werkzeug = "^2.3.0"
croniter = "^1.4.0"
apscheduler = "^3.10.4"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"